--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
+title: My first page
+author: Jean-Marc
+email: your-email@domain.com
+description: > # this means to ignore newlines until "baseurl:"
+  This is my first great production!
+
 theme: jekyll-theme-minimal
