--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My first page
+title: My first static website
 author: Jean-Marc
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
