--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   This is my first great production!
 
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
