--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,7 @@ author: Jean-Marc
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   This is my first great production!
+  
+show_excerpts: true # set to false to remove excerpts on the homepage
 
 theme: jekyll-theme-cayman
