--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: My first static website
-author: Jean-Marc
-email: your-email@domain.com
+title: Jean-Marc MONTOUT
+author: Jean-Marc MONTOUT
+email: montout.jeanmarc@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This is my first great production!
   
