--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Jean-Marc MONTOUT
 author: Jean-Marc MONTOUT
 email: montout.jeanmarc@gmail.com
+logo: [https://github.com/jean-marcm/static-web/blob/master/jean-marc.jpg]
 description: > # this means to ignore newlines until "baseurl:"
   This is my first great production!
   
