--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Jean-Marc MONTOUT
 email: montout.jeanmarc@gmail.com
 logo: [https://github.com/jean-marcm/static-web/blob/master/jean-marc.jpg]
 description: > # this means to ignore newlines until "baseurl:"
-  This is my first great production!
+  Développeur Web
   
 show_excerpts: true # set to false to remove excerpts on the homepage
 
