--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jean-Marc MONTOUT
 author: Jean-Marc MONTOUT
 email: montout.jeanmarc@gmail.com
-logo: jean-marc.jpg
+logo: assets/jean-marc.jpg
 description: > # this means to ignore newlines until "baseurl:"
   Développeur Web
   
