--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 title: Jean-Marc MONTOUT
 author: Jean-Marc MONTOUT
 email: montout.jeanmarc@gmail.com
-logo: assets/jean-marc.jpg
-description: > # this means to ignore newlines until "baseurl:"
-  Développeur Web
+logo: assets/jean-marc-2.jpg
+description: Développeur Web
   
-show_excerpts: true # set to false to remove excerpts on the homepage
+show_excerpts: false # set to false to remove excerpts on the homepage
 
 theme: jekyll-theme-minimal
