--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Jean-Marc MONTOUT
 email: montout.jeanmarc@gmail.com
 logo: assets/jean-marc-2.jpg
 description: Développeur Web
-  
+show_downloads: true
 show_excerpts: false # set to false to remove excerpts on the homepage
 
 theme: jekyll-theme-minimal
