Try new description

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Jean-Marc MONTOUT
 author: Jean-Marc MONTOUT
 email: montout.jeanmarc@gmail.com
 logo: assets/jean-marc-2.jpg
-description: Développeur Web
+description: [:email:](mailto:jeanmarc.montout@outlook.fr)
 show_downloads: true
 show_excerpts: false # set to false to remove excerpts on the homepage
 
