--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Jean-Marc MONTOUT
 author: Jean-Marc MONTOUT
 email: montout.jeanmarc@gmail.com
 logo: assets/jean-marc-small.jpg
-description: :email:
+description: email
 show_downloads: false
 show_excerpts: false # set to false to remove excerpts on the homepage
 
