--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Jean-Marc MONTOUT
 author: Jean-Marc MONTOUT
-email: montout.jeanmarc@gmail.com
+email: jeanmarc.montout@gmail.com
 logo: assets/jean-marc-small.jpg
-description: email
+description: [email](jeanmarc.montout@gmail.com)
 show_downloads: false
 show_excerpts: false # set to false to remove excerpts on the homepage
 
